fixed navbar z-index

--- a/client/src/scss/_navbar.scss
+++ b/client/src/scss/_navbar.scss
@@ -27,6 +27,7 @@
 	height: 60px;
 	text-transform: uppercase;
 	box-shadow: 0 1px 3px rgba(0,0,0,0.1);
+	z-index: 9999;
 }
 
 .navbar-brand {
